# mcp-chat-wksp

./: .env.example  .gitignore  .gitmodules  GATEWAY-MIGRATION-COMPLETE.md  QUICK_START.md  README.md  SIMPLIFIED-ARCHITECTURE.md  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml  setup.sh  test-containerized-gateway.js  test-database-migration.js  test-gateway-chat.js  test-gateway-integration.js  test-gateway-simple.sh  test-mcp-connection.sh
apps/ai-service/: .env.example  API.md  DOCKER.md  README.md  docker-compose.yml  project.json  requirements-docker.txt  requirements-simple.txt  requirements.txt  test_dynamic_mcp.py
apps/ai-service/mcp_gateway/: __init__.py  auth.py  database.py  main.py  mcp_client.py  mcp_manager.py
apps/ai-service/tests/: test_hello.py
apps/chat/: .env.example  EXTERNAL-API-INTEGRATION.md  project.json  test-external-api.md
apps/chat-api/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  project.json  tsconfig.json
apps/chat-api/src/: main.ts
apps/chat-api/src/config/: env.ts
apps/chat-api/src/db/: connection.ts  schema.ts
apps/chat-api/src/lib/: mcp-client.ts  (+2 more)
apps/mcp-chat-app/: package.json  pnpm-lock.yaml  project.json  tsconfig.json
apps/mcp-chat-app/src/: instrumentation.ts
apps/mcp-gateway/: .coverage  .dockerignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  project.json  pyproject.toml
apps/mcp-gateway-java/: build.gradle  project.json  settings.gradle
apps/mcp-gateway/mcp_gateway/: auth.py  database.py  main.py  mcp_client.py
examples/: curl-examples.sh  python-client.py
(+40 files in other folders)
